fix: Reponsive Style with No Overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@ html {
   width: 100vw;
   min-height: 100vh;
   height: 100%;
+  overflow-x: hidden;
 }
 body,
 #__next {
